Styling: modify css to fix alignment issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+
+
 /*-----------------------------General styles----------------------------*/
 
 .link {
@@ -42,7 +44,6 @@ body {
 
 section {
     text-align: center;
-    width: 100%;
     background-color: #689CA0;
     border-radius: 16px;
     margin: 20px;
@@ -127,6 +128,7 @@ h3 {
 }
 
 /*-----------------------------Pop-up window----------------------------*/
+/*-- Optional enhancment
 
 #pop-up {
     display: none;
@@ -151,7 +153,7 @@ h3 {
     border-radius: 25%;
     display: inline-block;
 }
-
+--*/
 /*-------------------------------------Header------------------------------*/
 
 /* used ChatGPT to workout how to bring the color back */
